# omnibioai-control-center

./: .coverage  .gitignore  Dockerfile.new  README.md  coverage.json  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
backend/: .coverage  coverage.json  coveragerc  pyproject.toml
backend/src/control_center/: combined_control_center.py  main.py
backend/src/control_center/api/: routes_docker.py  routes_llm.py  routes_reference.py  routes_report.py  routes_services.py  routes_storage.py  routes_summary.py
backend/src/control_center/utils/: summary_client.py
backend/src/omnibioai_control_center.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_checks.py  test_main.py  test_runner.py  test_summary_client.py
compose/: docker-compose.control-center.yml
config/: control_center.yaml
deploy/: README.md
deploy/compose/: docker-compose.yml
deploy/compose/configs/: servers.local.yaml
deploy/control-center/backend/: pyproject.toml
deploy/control-center/backend/src/control_center/: main.py
deploy/control-center/backend/src/control_center/api/: routes_services.py
deploy/control-center/backend/src/control_center/checks/: disk.py  http.py  tcp.py
deploy/control-center/backend/src/control_center/core/: runner.py  settings.py
deploy/control-center/config/: control_center.example.yaml
deploy/k8s/: tes-deployment.yaml
docker/: Dockerfile
frontend/cc-ui/: package-lock.json  package.json
frontend/cc-ui/src/: api.ts  index.css
frontend/cc-ui/src/components/: Header.tsx
frontend/cc-ui/src/pages/: ConfigPage.tsx  DockerPage.tsx  EcosystemPage.tsx  HealthPage.tsx
local_registry/model_registry/tasks/celltype_sc/models/celltype_classification_sc/aliases/: latest.json  (+1 more)
local_registry/tasks/demo/models/dummy/aliases/: latest.json
local_registry/tasks/demo/models/dummy/audit/: promotions.jsonl
omnibioai-control-center/: Dockerfile  README.md  pyproject.toml
omnibioai-control-center/omnibioai_control_center/app/: main.py
scripts/: generate_report.py  run_coverage_host.py
utils/: README.md  cloc_multi.py  count_lines.py  create_chart.py  kill_port.sh  report_generator.py  view_image.py
(+28 files in other folders)
