[project]
name = "omnibioai-control-center"
version = "0.1.0"
description = "OmniBioAI Control Center - Health dashboard and ecosystem report server for the OmniBioAI stack"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "PyYAML>=6.0.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-p", "no:django",
  "--cov=control_center",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["control_center"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "pass",
  # Exclude the HTML dashboard string — it's a string literal, not executable code
  "return \"\"\"<!doctype",
  "return \"\"\"<!doctype html",
]

# Exclude the dashboard HTML body from line counting entirely
# The string literal spanning lines 155-489 is not executable Python
[tool.coverage.paths]
source = [
  "src/",
  "*/site-packages/",
]